# GEMEditor

./: .gitignore  .travis.yml  INSTALL.md  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
GEMEditor/: GEMEditor.cfg  __init__.py  base_classes.py  cobraClasses.py  conftest.py  data_classes.py  evidence_class.py  facts.py  functions.py  main.py  run.py  tabs.py
GEMEditor/analysis/: __init__.py  duplicates.py  formula.py  model_statistics.py  model_test.py  networks.py  solution.py  statistics.py
GEMEditor/base/: __init__.py  classes.py  delegates.py  dialogs.py  functions.py  proxy.py  tables.py  threads.py  views.py  widgets.py
GEMEditor/cobras/: classes.py
GEMEditor/connect/: checkversion.py  kegg.py  ncbi.py  pmc.py  pubmed.py  urldownloader.py
GEMEditor/database/: __init__.py  annotate.py  base.py  create.py  load.py  model.py  query.py  tables.py
GEMEditor/dialogs/: __init__.py  annotation.py  database.py  evidence.py  input.py  map.py  mock.py  model.py  modeltest.py  program.py  qualitychecks.py  reaction.py  reference.py  results.py  standard.py
GEMEditor/evidence/: analysis.py  assertions.py  base.py  eco_parser.py
GEMEditor/main/: __init__.py
GEMEditor/map/: base.py  dialog.py  escher.py  turnover.py
GEMEditor/rw/: __init__.py  annotation.py  compartment.py  evidences.py  fluxset.py  gene.py  metabolite.py  model.py  parsers.py  reaction.py  reference.py  sbml3.py  units.py
GEMEditor/solution/: __init__.py  analysis.py  base.py  dialogs.py  display.py  tables.py  widgets.py
GEMEditor/test/: example_fetch.xml  test_main.py  (+5 more)
(+341 files in other folders)
