[bumpversion]
current_version = 0.4.0
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	((?P<release>[ab])(?P<num>\d+))?
serialize = 
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:GEMEditor/GEMEditor.cfg]
search = version = {current_version}
replace = version = {new_version}

[metadata]
description-file = README.rst

